# aether

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  cluster-issuer.yaml  docker-compose.yaml
apps/control-plane/: Cargo.toml
apps/control-plane/src/: main.rs
apps/genesis/: Cargo.toml
apps/genesis/src/: args.rs  main.rs
apps/operator/: Cargo.toml
apps/operator/src/: main.rs
libs/aether-api/: Cargo.toml
libs/aether-api/src/: args.rs  errors.rs  lib.rs  openapi.rs  response.rs  router.rs  state.rs
libs/aether-api/src/handlers/: mod.rs
libs/aether-api/tests/: api_tests.rs  create_role_handler.rs
libs/aether-auth/: Cargo.toml
libs/aether-auth/src/: lib.rs
libs/aether-auth/src/domain/: ports.rs
libs/aether-auth/src/infrastructure/: ferriskey_repository.rs  keycloak_repository.rs
libs/aether-core/: ARCHITECTURE.md  Cargo.toml  README.md
libs/aether-core/.sqlx/: query-0e4261b06ccc7f49600c446288d9e101f9f184866fddc774c673afd227910cf0.json  query-0ecd54c1c99ea2fdb805adc6d6a1a2567df63732ff175eddd97024cf8f7d54a6.json  query-1689ad5984d7a3fa75b4d6ad07665d766cc46ea0cecf85799b078177f287cdc8.json  query-2060b37225e1ec1310739ec28b00c618446b795ec5063c9b9e49ff4c6e659caf.json  query-21b7dcc4a5b4cf622aafa022d97617f4593956b87c4d6ca191b83b692c528ceb.json  query-24e7d826f1655f246ed698eb14b4652cb9ea1fa2432ea35229b33132c5ad4acd.json  query-2f5a8641383742db9642d222759f3cbe1b483c64c42c1fe5345ac3667012d350.json  query-38b5e436047ec4f5647d121818fadcbdea6eab2f6bfdc067392199df99126a83.json  query-41c1320296a1390797d9a99767ae100db52a3b2805ab417d01e08eeb90997ee5.json  query-466e10ad393837e5cd1467c529a50a18aefae7931e706181f9ddd9973f50cf28.json  query-572876ab69e1c2d4020d5da038f9dbc9947893322f106a7aab892a59d21924c6.json  query-5890a3337c7189eef63e2298b392a84a0b98fac57bd14940c9add680f614145d.json  query-58f0c80b507d4b3f1f680a84b34bfb03f388227546baa8c0af8f976e4e8a7115.json  query-67830ae74973f3920435b30436136cd91b63e972282fa22d0bf456e260c4901d.json  query-6f8fb9d367f2d8a409612672ca30c15795bb7d5c306bdf191b694e9cedef516a.json  query-804439f406d47ac1511c080f8430ac475588f1b6f25566e414ec6ff834cb4be6.json  query-83e5c872ed4a1f4749b53acdad535db6cc921b04d14e6ae8cd6ffab76f3fbd17.json  query-94acfb0079828255bdf7f9fb28f81726328310a34d62c7d681d2b2605689aa54.json  query-976bc30b1b01a2c0bece3f0d6f3226e8575aa94745a7a5675b4f4842c8b12fa0.json  query-98cd456efe3bf6a044b5a00028338eb6c3f190bb8f05a3dda345823b68c55d29.json  query-9be31f7cf16cf7ed7534bf35a9d11bbba27adba9e56cc78fa78b27eaee055444.json  query-a16c8fff6f874f4e312aefadc9ca0c75120f41e1309967981e1d5f3322348d03.json  query-a8dfa7888eaf1e217fddc0ff94d94cefb9ea03911e24cf09f42e24eac0aa18dd.json  query-aa7229b11941cb22edc3ed2b8df09b2ceab632f7186e06e60412b3ee2850ca25.json  query-af8b16655d29f2d786ae0ae1121612bfd780dd122483c9795ebda8f4696069a5.json  query-b7ef5f0767e3c9192306f9bfa811eac71726742b0d66725ef21e65fee39a1536.json  query-bac0483153bcb24067659c9c2151f0d90c955d1a4e29a104c3730d2e87b92669.json  query-c40172cda4ca4aafe7c32f314945dfd38e1891f710d783d092931248369fa0f0.json  query-cc0fd3f9a4e3c489ffac8975ed9aa2d76b4ab31b4003285e21bdc33faee6916e.json  query-ced7290c9b9bdf5d53e557fb80bc9408a2024299e5844597f0c7ec1e9dc1ed79.json  query-d2c96e9dad93c68e7e961edc9fee72576d8700f7d2ab9804feb2259af1809c20.json  query-d457ebf25847360e12a8e28c2173f5a401a5a6465972583820532013d254d790.json  query-d796a991e32ef28e7956308cb72ee804888d409aa7913ba24ecf50497a292013.json  query-d86c197b74b21270fbc68e10ddd220c3e508e6ccd68021fe7242dab835645abd.json  query-e0d48e4e74d59c15d8ccb60920a876a8c518cb76c9f5863bc6ce8877674143da.json  query-e63e99ad334e137148d5e95ee5f14e3a732889dc4d20cb47a39f3c59a52f9c59.json  query-ea5502546d8581381beae588b51d0382c14278113e43e0c5bc056fdfc7f3eeef.json  query-f252430c1e204c4d00f2231e8e2463c7bd0f20c78f25f551dada57904c5e5b38.json  query-f52888b84aaa318f5c08159d731240ab9891a39b87032d320eb530e74ca0593e.json  query-fd326d1422cb226cbacbd17e778bf63a588420c2cd50aea6f7684f04d78c0f1c.json
libs/aether-core/migrations/: 20260106000001_create_organisations_table.down.sql  20260106000001_create_organisations_table.up.sql  20260106000002_create_organisation_members_table.down.sql  20260106000002_create_organisation_members_table.up.sql  20260106000002_create_users_and_members_table.down.sql  20260106000002_create_users_and_members_table.up.sql  20260106000003_create_roles_table.down.sql  20260106000003_create_roles_table.up.sql  20260106000004_create_dataplane_table.up.sql  20260106000004_create_deployments_table.down.sql  20260106000004_create_deployments_table.up.sql  20260106000005_create_actions_table.down.sql  20260106000005_create_actions_table.up.sql  20260106000005_create_deployments_table.down.sql  20260106000005_create_deployments_table.up.sql  20260106000006_create_actions_table.up.sql  README.md
libs/aether-core/src/: lib.rs  test_mocks.rs
libs/aether-core/src/application/: mod.rs
libs/aether-core/src/domain/: mod.rs
libs/aether-core/src/infrastructure/: executor.rs  mod.rs
libs/aether-crds/: Cargo.toml
libs/aether-crds/examples/: generate_crd.rs
libs/aether-crds/src/: lib.rs
libs/aether-crds/src/common/: constants.rs  types.rs
libs/aether-crds/src/v1alpha/: identity_instance.rs  identity_instance_upgrade.rs  mod.rs
libs/aether-domain/: Cargo.toml
libs/aether-domain/src/: lib.rs
libs/aether-domain/src/action/: commands.rs  mod.rs  ports.rs  service.rs
libs/aether-domain/src/dataplane/: entities.rs  mod.rs  ports.rs  service.rs  value_objects.rs
libs/aether-domain/src/deployments/: commands.rs  mod.rs  ports.rs  service.rs
libs/aether-domain/src/organisation/: commands.rs  mod.rs  ports.rs  service.rs  value_objects.rs
libs/aether-domain/src/role/: service.rs
libs/aether-domain/src/user/: commands.rs  mod.rs  ports.rs  service.rs
libs/aether-herald-core/: Cargo.toml
libs/aether-operator-core/: Cargo.toml
libs/aether-operator-core/src/: lib.rs
libs/aether-postgres/: Cargo.toml
libs/aether-postgres/src/: lib.rs
libs/genesis-core/: Cargo.toml
(+331 files in other folders)
