[workspace]
resolver = "2"
members = [
    "apps/control-plane",
    "apps/operator",

    "libs/aether-core",
    "libs/aether-api",
    "libs/aether-auth",
    "libs/aether-permission",
    "libs/aether-operator-core",
    "libs/aether-crds",
    "libs/aether-herald-core", "libs/aether-persistence", "libs/aether-postgres", "libs/aether-domain", "apps/aegis", "libs/aegis-core",
]

[workspace.package]
version = "0.1.0"
authors = ["nathaelb <pro.nathaelbonnal@gmail.com>"]
edition = "2024"
