[package]
name = "genesis"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.60", features = ["derive", "env"] }
dotenvy = "0.15.7"
genesis-core = { path = "../../libs/genesis-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
