[package]
name = "aether-core"
description = "Core library for Aether"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
aether-auth = { path = "../aether-auth" }
chrono = { version = "0.4.42", features = ["serde"] }
thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "macros", "json"] }
utoipa = { version = "5.4.0", features = ["chrono", "uuid"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
aether-permission = { path = "../aether-permission" }
tokio = { version = "1", features = ["sync", "macros"] }
mockall = { version = "0.14.0", optional = true }



[dev-dependencies]
mockall = "0.14.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
test-mocks = ["dep:mockall"]
