[package]
name = "aether-herald-core"
description = "Core library for Aether Herald"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["serde", "v4"] }

[dev-dependencies]
mockall = "0.14.0"
