[package]
name = "aether-operator-core"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
aether-crds = { path = "../aether-crds" }
k8s-openapi = { version = "0.26.0", features = ["latest"] }
kube = { version = "2.0.1", features = ["runtime"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
futures = "0.3.31"
tracing = "0.1.41"
rand = "0.8.5"

[dev-dependencies]
mockall = "0.14.0"
