[package]
name = "aether-postgres"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
aether-domain = { path = "../aether-domain" }
aether-persistence = { path = "../aether-persistence" }
chrono = { version = "0.4.42", features = ["serde"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "macros", "json"] }
tracing = "0.1.44"
uuid = { version = "1.19.0", features = ["serde", "v4"] }

[dev-dependencies]
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "macros", "json", "migrate"] }
testcontainers = "0.15.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
