[package]
name = "genesis-core"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
lapin = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
mockall = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
